[project]
name = "healthbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "langchain>=0.2.2",
    "langchain_openai==0.1.23",
    "langgraph==0.2.19",
    "langchainhub==0.1.21",
    "tavily-python==0.7.8",
    "langchain-community==0.2.16",
    "python-dotenv==1.0.1",
    "ollama==0.5.1",
    "gradio==5.35.0",
]
